codegen refactored